--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>\<style type="text/css">
+    <title>СайтТомы Бамбук</title>\<style type="text/css">
 #podezd
 {
   color: green;
